--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "applicationId": "Cider",
   "productName": "Cider",
   "version": "1.6.0",
+  "type": "module",
   "description": "A new cross-platform Apple Music experience based on Electron and Vue.js written from scratch with performance in mind.",
   "license": "AGPL-3.0",
   "main": "./build/index.js",
@@ -59,7 +60,7 @@
     "electron-updater": "^5.3.0",
     "electron-window-state": "^5.0.3",
     "express": "^4.18.2",
-    "get-port": "5.1.1",
+    "get-port": "6.1.2",
     "jimp": "^0.16.2",
     "lastfmapi": "^0.1.1",
     "mdns-js": "github:ciderapp/node-mdns-js",
@@ -123,9 +124,9 @@
     }
   ],
   "build": {
-    "electronVersion": "21.2.0",
+    "electronVersion": "21.3.3",
     "electronDownload": {
-      "version": "21.2.0+wvcus",
+      "version": "21.3.3+wvcus",
       "mirror": "https://github.com/castlabs/electron-releases/releases/download/v"
     },
     "appId": "cider",
